@@ -3,6 +3,8 @@ intended v0.1.22
 + implement ui/Component#_makeDraggable - publishes 'drag' and 'drop' events, both with a data object describing the drag
 + implement throttle
 + change implementation of delay to actually delay, rather than throttle
++ Improved ui/Component event normalization (notably mousewheel)
++ Implement browser
 
 v0.1.21
 + start implementing std/time
